--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ShopManga</string>
     <string name="Search_Button">Search</string>
     <string name="Address_Search">Address</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="access_token">pk.eyJ1IjoiYXlvdWJtb3VocmkiLCJhIjoiY2p0Ymp4cmN4MGxkeDRhbGl0eTNoY25idyJ9.qf2m7yqI1u-syT4IBDbzcQ</string>
 </resources>
