--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="access_token">pk.eyJ1IjoiYXlvdWJtb3VocmkiLCJhIjoiY2p0Ymp4cmN4MGxkeDRhbGl0eTNoY25idyJ9.qf2m7yqI1u-syT4IBDbzcQ</string>
     <string name="Details_button">details</string>
     <string name="Manga_Name">Manga Name</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="AddMangaFragement_name">Name</string>
+    <string name="AddMangaFragement_price">price</string>
+    <string name="AddMangaFragement_sellerName">Seller Name</string>
+    <string name="AddMangaFragement_telephone">Telephone</string>
 </resources>
