--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Details_button">details</string>
     <string name="Manga_Name">Manga Name</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="AddMangaFragement_name">Name</string>
     <string name="AddMangaFragement_price">price</string>
@@ -14,6 +15,4 @@
     <string name="AddMangaFragement_telephone">Telephone</string>
     <string name="Button_ListManga">Liste</string>
     <string name="AddMangaFragment_Volume">Volume</string>
-    <string name="AddMangaFragement_search_button">Search</string>
-
 </resources>
