Add remove manga
- add part my manga
- migrate to androidX

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="AddMangaFragement_telephone">Telephone</string>
     <string name="Button_ListManga">Liste</string>
     <string name="AddMangaFragment_Volume">Volume</string>
+    <string name="MyManga">My Manga</string>
 </resources>
